--- a/TellMe_Mobile.Mobile/TellMe.iOS/Views/Cells/NotificationCenterStoryCell.xib
+++ b/TellMe_Mobile.Mobile/TellMe.iOS/Views/Cells/NotificationCenterStoryCell.xib
@@ -24,7 +24,7 @@
                             <constraint id="1296" firstItem="603" firstAttribute="height" constant="44" relation="lessThanOrEqual"/>
                         </constraints>
                     </label>
-                    <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" id="2210" translatesAutoresizingMaskIntoConstraints="NO" image="UserPic" clipsSubviews="YES">
+                    <imageView userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" id="2210" translatesAutoresizingMaskIntoConstraints="NO" image="UserPic" clipsSubviews="YES">
                         <rect key="frame" x="10" y="10" width="44" height="44"/>
                         <constraints>
                             <constraint id="2301" firstItem="2210" firstAttribute="height" constant="44"/>
@@ -36,7 +36,7 @@
                             </userDefinedRuntimeAttribute>
                         </userDefinedRuntimeAttributes>
                     </imageView>
-                    <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" id="3426" translatesAutoresizingMaskIntoConstraints="NO" clipsSubviews="YES" customClass="Picture">
+                    <imageView userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" id="3426" translatesAutoresizingMaskIntoConstraints="NO" clipsSubviews="YES" customClass="Picture">
                         <rect key="frame" x="321" y="10" width="44" height="44"/>
                         <constraints>
                             <constraint id="3427" firstItem="3426" firstAttribute="height" constant="44"/>
@@ -71,5 +71,6 @@
         <image name="Bell" width="25" height="25"/>
         <image name="Storytellers" width="25" height="25"/>
         <image name="Account" width="25" height="25"/>
+        <image name="AddGroup" width="25" height="25"/>
     </resources>
 </document>
