--- a/TellMe_Mobile.Mobile/TellMe.iOS/Views/Cells/TribeMembersListCell.xib
+++ b/TellMe_Mobile.Mobile/TellMe.iOS/Views/Cells/TribeMembersListCell.xib
@@ -7,7 +7,7 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" rowHeight="64" id="cxk-wN-pdQ" customClass="StorytellersListCell">
+        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" rowHeight="64" id="cxk-wN-pdQ" customClass="TribeMembersListCell">
             <rect key="frame" x="0.0" y="0.0" width="375" height="64"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="cxk-wN-pdQ" id="YTl-1W-gDM">
@@ -41,10 +41,10 @@
                             </userDefinedRuntimeAttribute>
                         </userDefinedRuntimeAttributes>
                     </imageView>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Friendship Status" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="5358" translatesAutoresizingMaskIntoConstraints="NO" misplaced="YES">
-                        <rect key="frame" x="245" y="22" width="120" height="19"/>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Status" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="5358" translatesAutoresizingMaskIntoConstraints="NO">
+                        <rect key="frame" x="321" y="23" width="44" height="18"/>
                         <fontDescription key="fontDescription" type="system" pointSize="15"/>
-                        <nil key="textColor"/>
+                        <color key="textColor" colorSpace="calibratedWhite" white="0.333333333333333" alpha="1"/>
                         <nil key="highlightedColor"/>
                         <constraints>
                             <constraint id="9943" firstItem="5358" firstAttribute="width" constant="120" relation="lessThanOrEqual"/>
@@ -69,7 +69,7 @@
                 <outlet property="Username" destination="142" id="name-outlet-142"/>
                 <outlet property="FullName" destination="526" id="name-outlet-526"/>
                 <outlet property="ProfilePicture" destination="1956" id="name-outlet-1956"/>
-                <outlet property="FriendshipStatusLabel" destination="5358" id="name-outlet-5358"/>
+                <outlet property="StatusLabel" destination="5358" id="name-outlet-5358"/>
             </connections>
             <color key="backgroundColor" colorSpace="calibratedWhite" white="1" alpha="1"/>
         </tableViewCell>
