--- a/TellMe_Mobile.Mobile/TellMe.iOS/Story.storyboard
+++ b/TellMe_Mobile.Mobile/TellMe.iOS/Story.storyboard
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13529" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="4023">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13196" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="4023">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13527"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13173"/>
         <capability name="Aspect ratio constraints" minToolsVersion="5.1"/>
         <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
@@ -576,6 +576,104 @@
                 </view>
             </objects>
             <point key="canvasLocation" x="-3706" y="-1045"/>
+        </scene>
+        <!--Tribe-->
+        <scene sceneID="Igb-8U-tRI">
+            <objects>
+                <tableViewController storyboardIdentifier="TribeViewController" useStoryboardIdentifierAsRestorationIdentifier="YES" id="Ie6-5z-Ms3" customClass="TribeViewController" sceneMemberID="viewController">
+                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" id="gLx-Mo-wPi">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <view key="tableHeaderView" contentMode="scaleToFill" id="DNR-d0-SDT">
+                            <rect key="frame" x="0.0" y="0.0" width="375" height="100"/>
+                            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            <subviews>
+                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Tribe Name" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="OpR-YF-HYf">
+                                    <rect key="frame" x="142" y="8" width="90" height="21"/>
+                                    <fontDescription key="fontDescription" type="system" weight="medium" pointSize="17"/>
+                                    <nil key="textColor"/>
+                                    <nil key="highlightedColor"/>
+                                </label>
+                                <button opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ybe-aj-gcX" customClass="Button">
+                                    <rect key="frame" x="137" y="62" width="100" height="30"/>
+                                    <color key="backgroundColor" red="0.083779789507389069" green="0.47679215669631958" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                    <constraints>
+                                        <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="100" id="ENd-3q-Q3R"/>
+                                    </constraints>
+                                    <color key="tintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                    <state key="normal" title="Send Story"/>
+                                    <userDefinedRuntimeAttributes>
+                                        <userDefinedRuntimeAttribute type="number" keyPath="layer.borderRadius">
+                                            <integer key="value" value="5"/>
+                                        </userDefinedRuntimeAttribute>
+                                    </userDefinedRuntimeAttributes>
+                                    <connections>
+                                        <action selector="SendStoryTouched:" destination="Ie6-5z-Ms3" eventType="touchUpInside" id="Rld-Oo-hxU"/>
+                                    </connections>
+                                </button>
+                            </subviews>
+                            <constraints>
+                                <constraint firstItem="OpR-YF-HYf" firstAttribute="top" secondItem="DNR-d0-SDT" secondAttribute="top" constant="8" id="2uC-dE-Snt"/>
+                                <constraint firstItem="ybe-aj-gcX" firstAttribute="leading" relation="greaterThanOrEqual" secondItem="DNR-d0-SDT" secondAttribute="leading" constant="20" id="BLT-sr-HcQ"/>
+                                <constraint firstItem="ybe-aj-gcX" firstAttribute="centerX" secondItem="DNR-d0-SDT" secondAttribute="centerX" id="C9g-I9-8Kg"/>
+                                <constraint firstItem="OpR-YF-HYf" firstAttribute="leading" relation="greaterThanOrEqual" secondItem="DNR-d0-SDT" secondAttribute="leading" constant="20" id="K1j-Pc-no2"/>
+                                <constraint firstAttribute="bottom" secondItem="ybe-aj-gcX" secondAttribute="bottom" constant="8" id="VCm-Z8-jMt"/>
+                                <constraint firstItem="OpR-YF-HYf" firstAttribute="centerX" secondItem="DNR-d0-SDT" secondAttribute="centerX" id="hW4-oi-Y0f"/>
+                                <constraint firstAttribute="trailing" relation="greaterThanOrEqual" secondItem="OpR-YF-HYf" secondAttribute="trailing" constant="20" id="lcU-Fi-6tP"/>
+                                <constraint firstAttribute="trailing" relation="greaterThanOrEqual" secondItem="ybe-aj-gcX" secondAttribute="trailing" constant="20" id="zzy-AW-sqZ"/>
+                            </constraints>
+                        </view>
+                        <view key="tableFooterView" contentMode="scaleToFill" id="2GD-sF-vip">
+                            <rect key="frame" x="0.0" y="172" width="375" height="44"/>
+                            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            <subviews>
+                                <activityIndicatorView opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" style="gray" translatesAutoresizingMaskIntoConstraints="NO" id="1DD-Ko-kA3">
+                                    <rect key="frame" x="177" y="12" width="20" height="20"/>
+                                </activityIndicatorView>
+                            </subviews>
+                            <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                            <constraints>
+                                <constraint firstItem="1DD-Ko-kA3" firstAttribute="centerX" secondItem="2GD-sF-vip" secondAttribute="centerX" id="8hv-vI-IjI"/>
+                                <constraint firstItem="1DD-Ko-kA3" firstAttribute="centerY" secondItem="2GD-sF-vip" secondAttribute="centerY" id="m5Z-3D-HHh"/>
+                            </constraints>
+                        </view>
+                        <prototypes>
+                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" id="wFf-Sn-fgP">
+                                <rect key="frame" x="0.0" y="128" width="375" height="44"/>
+                                <autoresizingMask key="autoresizingMask"/>
+                                <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="wFf-Sn-fgP" id="CX3-gv-VK5">
+                                    <rect key="frame" x="0.0" y="0.0" width="375" height="43.5"/>
+                                    <autoresizingMask key="autoresizingMask"/>
+                                </tableViewCellContentView>
+                            </tableViewCell>
+                        </prototypes>
+                        <connections>
+                            <outlet property="dataSource" destination="Ie6-5z-Ms3" id="SNF-dY-WpJ"/>
+                            <outlet property="delegate" destination="Ie6-5z-Ms3" id="3US-cZ-b0s"/>
+                        </connections>
+                    </tableView>
+                    <navigationItem key="navigationItem" title="Tribe" id="OcJ-a6-EDZ">
+                        <barButtonItem key="rightBarButtonItem" title="Info" id="Ujc-e3-bcd">
+                            <connections>
+                                <action selector="InfoButtonTouched:" destination="Ie6-5z-Ms3" id="Hn1-hh-UAj"/>
+                            </connections>
+                        </barButtonItem>
+                    </navigationItem>
+                    <simulatedNavigationBarMetrics key="simulatedTopBarMetrics" prompted="NO"/>
+                    <refreshControl key="refreshControl" opaque="NO" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" enabled="NO" contentHorizontalAlignment="center" contentVerticalAlignment="center" id="SIJ-hw-deX">
+                        <rect key="frame" x="0.0" y="0.0" width="1000" height="1000"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </refreshControl>
+                    <connections>
+                        <outlet property="NavItem" destination="OcJ-a6-EDZ" id="Ctm-Wi-JJq"/>
+                        <outlet property="Spinner" destination="1DD-Ko-kA3" id="GZq-JV-nIf"/>
+                        <outlet property="TribeName" destination="OpR-YF-HYf" id="39E-s0-ur5"/>
+                    </connections>
+                </tableViewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="LwG-pW-XSH" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-1479.2" y="-322.48875562218893"/>
         </scene>
     </scenes>
     <resources>
