--- a/TellMe_Mobile.Mobile/TellMe.iOS/Main.storyboard
+++ b/TellMe_Mobile.Mobile/TellMe.iOS/Main.storyboard
@@ -213,10 +213,10 @@
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <prototypes>
                                     <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" rowHeight="45" id="31337">
-                                        <rect key="frame" x="0.0" y="1" width="600" height="45"/>
+                                        <rect key="frame" x="0.0" y="1" width="375" height="45"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="31337" id="31338">
-                                            <rect key="frame" x="0.0" y="0.0" width="600" height="44.5"/>
+                                            <rect key="frame" x="0.0" y="0.0" width="375" height="44.5"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                         </tableViewCellContentView>
                                     </tableViewCell>
@@ -257,7 +257,7 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" ambiguous="YES" translatesAutoresizingMaskIntoConstraints="NO" id="33523">
-                                <rect key="frame" x="0.0" y="20" width="600" height="580"/>
+                                <rect key="frame" x="0.0" y="20" width="375" height="647"/>
                                 <subviews>
                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="33627">
                                         <rect key="frame" x="0.0" y="64" width="375" height="500"/>
@@ -277,7 +277,6 @@
                                             <constraint firstAttribute="width" secondItem="33627" secondAttribute="height" multiplier="3:4" id="33711"/>
                                             <constraint firstItem="44841" firstAttribute="width" secondItem="33627" secondAttribute="width" id="45440"/>
                                             <constraint firstItem="44841" firstAttribute="top" secondItem="33627" secondAttribute="top" id="45508"/>
-                                            <constraint firstItem="44841" firstAttribute="centerX" secondItem="33627" secondAttribute="centerX" id="45542"/>
                                             <constraint firstItem="46909" firstAttribute="centerX" secondItem="44841" secondAttribute="centerX" id="47042"/>
                                             <constraint firstItem="46909" firstAttribute="centerY" secondItem="44841" secondAttribute="centerY" id="47076"/>
                                         </constraints>
@@ -317,6 +316,38 @@
                                             <constraint firstAttribute="trailing" relation="greaterThanOrEqual" secondItem="37586" secondAttribute="trailing" constant="10" id="37920"/>
                                         </constraints>
                                     </view>
+                                    <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" alwaysBounceHorizontal="YES" showsVerticalScrollIndicator="NO" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="bzF-eY-pjn">
+                                        <rect key="frame" x="8" y="584" width="359" height="40"/>
+                                        <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                        <constraints>
+                                            <constraint firstAttribute="height" constant="40" id="h4f-wG-pdB"/>
+                                        </constraints>
+                                        <collectionViewFlowLayout key="collectionViewLayout" scrollDirection="horizontal" minimumLineSpacing="5" minimumInteritemSpacing="10" id="KN4-um-Zgi">
+                                            <size key="itemSize" width="40" height="40"/>
+                                            <size key="headerReferenceSize" width="0.0" height="0.0"/>
+                                            <size key="footerReferenceSize" width="0.0" height="0.0"/>
+                                            <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
+                                        </collectionViewFlowLayout>
+                                        <cells>
+                                            <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" id="fg8-6i-Xam">
+                                                <rect key="frame" x="0.0" y="0.0" width="40" height="40"/>
+                                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                                <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO">
+                                                    <rect key="frame" x="0.0" y="0.0" width="40" height="40"/>
+                                                    <autoresizingMask key="autoresizingMask"/>
+                                                </view>
+                                            </collectionViewCell>
+                                        </cells>
+                                    </collectionView>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Shared with" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="jRz-5I-OJz">
+                                        <rect key="frame" x="8" y="564" width="77" height="20"/>
+                                        <constraints>
+                                            <constraint firstAttribute="height" constant="20" id="HAR-wa-dJA"/>
+                                        </constraints>
+                                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                        <color key="textColor" white="0.33333333333333331" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
                                 </subviews>
                                 <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                                 <constraints>
@@ -326,6 +357,12 @@
                                     <constraint firstItem="36506" firstAttribute="width" secondItem="33523" secondAttribute="width" id="36839"/>
                                     <constraint firstItem="36506" firstAttribute="centerX" secondItem="33523" secondAttribute="centerX" id="36873"/>
                                     <constraint firstItem="33627" firstAttribute="top" secondItem="36506" secondAttribute="bottom" id="36907"/>
+                                    <constraint firstItem="bzF-eY-pjn" firstAttribute="leading" secondItem="33523" secondAttribute="leading" constant="8" id="BDh-jM-6tv"/>
+                                    <constraint firstItem="bzF-eY-pjn" firstAttribute="width" secondItem="44841" secondAttribute="width" constant="-16" id="S9u-IP-Q9j"/>
+                                    <constraint firstItem="bzF-eY-pjn" firstAttribute="top" secondItem="jRz-5I-OJz" secondAttribute="bottom" id="VVn-Ky-TW5"/>
+                                    <constraint firstItem="44841" firstAttribute="leading" secondItem="33523" secondAttribute="leading" id="rDD-51-xCu"/>
+                                    <constraint firstItem="jRz-5I-OJz" firstAttribute="top" secondItem="44841" secondAttribute="bottom" id="smC-51-jgG"/>
+                                    <constraint firstItem="jRz-5I-OJz" firstAttribute="leading" secondItem="33523" secondAttribute="leading" constant="8" id="vY7-5D-kt8"/>
                                 </constraints>
                             </scrollView>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="39996">
@@ -351,6 +388,7 @@
                     <connections>
                         <outlet property="Preview" destination="44841" id="name-outlet-44841"/>
                         <outlet property="ProfilePicture" destination="36986" id="name-outlet-36986"/>
+                        <outlet property="ReceiversCollection" destination="bzF-eY-pjn" id="zrz-l3-hAs"/>
                         <outlet property="ScrollView" destination="33523" id="name-outlet-33523"/>
                         <outlet property="Spinner" destination="46909" id="name-outlet-46909"/>
                         <outlet property="StoryViewWrapper" destination="33627" id="name-outlet-33627"/>
@@ -359,7 +397,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="33154" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-2703" y="-1115"/>
+            <point key="canvasLocation" x="-2703.1999999999998" y="-1115.8920539730136"/>
         </scene>
     </scenes>
     <resources>
