--- a/TellMe_Mobile.Mobile/TellMe.iOS/Views/Cells/StoriesListCell.xib
+++ b/TellMe_Mobile.Mobile/TellMe.iOS/Views/Cells/StoriesListCell.xib
@@ -1,43 +1,119 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="13196" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="13529" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES">
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13173"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13527"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" rowHeight="439" id="cxk-wN-pdQ" customClass="StoriesListCell">
-            <rect key="frame" x="0.0" y="0.0" width="375" height="439"/>
+        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" rowHeight="455" id="cxk-wN-pdQ" customClass="StoriesListCell">
+            <rect key="frame" x="0.0" y="0.0" width="375" height="455"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="cxk-wN-pdQ" id="YTl-1W-gDM">
-                <rect key="frame" x="0.0" y="0.0" width="375" height="438"/>
+                <rect key="frame" x="0.0" y="0.0" width="375" height="454"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
-                    <view contentMode="scaleToFill" id="956" customClass="StoryView" translatesAutoresizingMaskIntoConstraints="NO">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="438.5"/>
-                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                    </view>
+                    <imageView clipsSubviews="YES" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="2394" customClass="Picture" verticalCompressionResistancePriority="1000">
+                        <rect key="frame" x="10" y="60" width="355" height="355"/>
+                        <constraints>
+                            <constraint firstAttribute="width" relation="lessThanOrEqual" secondItem="2394" secondAttribute="height" multiplier="1:1" id="2395"/>
+                        </constraints>
+                    </imageView>
+                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="2396" customClass="Picture">
+                        <rect key="frame" x="10" y="10" width="40" height="40"/>
+                        <constraints>
+                            <constraint firstAttribute="width" constant="40" id="2397"/>
+                            <constraint firstAttribute="width" secondItem="2396" secondAttribute="height" multiplier="1:1" id="2398"/>
+                        </constraints>
+                        <userDefinedRuntimeAttributes>
+                            <userDefinedRuntimeAttribute type="number" keyPath="layer.cornerRadius">
+                                <real key="value" value="20"/>
+                            </userDefinedRuntimeAttribute>
+                        </userDefinedRuntimeAttributes>
+                    </imageView>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" minimumScaleFactor="0.5" translatesAutoresizingMaskIntoConstraints="NO" id="2399" customClass="Label">
+                        <rect key="frame" x="60" y="20" width="305" height="20"/>
+                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                        <nil key="textColor"/>
+                        <nil key="highlightedColor"/>
+                    </label>
+                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" id="2400" translatesAutoresizingMaskIntoConstraints="NO" customClass="Button">
+                        <rect key="frame" x="335" y="420" width="30" height="30"/>
+                        <fontDescription key="fontDescription" type="system" pointSize="15"/>
+                        <color key="tintColor" colorSpace="calibratedWhite" white="0.666666666666667" alpha="1"/>
+                        <state key="normal" image="Comment">
+                            <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
+                        </state>
+                        <constraints>
+                            <constraint id="2403" firstItem="2400" firstAttribute="height" constant="30"/>
+                        </constraints>
+                        <connections>
+                            <action selector="CommentsButton_TouchUpInside:" destination="2402" id="2401" eventType="touchUpInside"/>
+                            <action selector="CommentsButton_TouchUpInside:" destination="cxk-wN-pdQ" id="3270" eventType="touchUpInside"/>
+                        </connections>
+                    </button>
+                    <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" id="4826" translatesAutoresizingMaskIntoConstraints="NO" verticalCompressionResistancePriority="699" showsVerticalScrollIndicator="NO" alwaysBounceHorizontal="YES">
+                        <rect key="frame" x="10" y="424" width="317" height="22"/>
+                        <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="10" minimumInteritemSpacing="10" id="4828" scrollDirection="horizontal">
+                            <size key="itemSize" width="22" height="22"/>
+                            <size key="headerReferenceSize" width="0.0" height="0.0"/>
+                            <size key="footerReferenceSize" width="0.0" height="0.0"/>
+                            <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
+                        </collectionViewFlowLayout>
+                        <cells/>
+                        <constraints>
+                            <constraint id="5932" firstItem="4826" firstAttribute="height" constant="22"/>
+                        </constraints>
+                        <color key="backgroundColor" colorSpace="calibratedWhite" white="1" alpha="1"/>
+                    </collectionView>
+                    <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" id="4827">
+                        <rect key="frame" x="0.0" y="0.0" width="240" height="50"/>
+                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                        <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center">
+                            <rect key="frame" x="0.0" y="0.0" width="240" height="50"/>
+                            <autoresizingMask key="autoresizingMask"/>
+                        </view>
+                    </collectionViewCell>
                 </subviews>
                 <constraints>
-                    <constraint id="1092" firstItem="956" firstAttribute="centerX" secondItem="YTl-1W-gDM" secondAttribute="centerX"/>
-                    <constraint id="1120" firstItem="956" firstAttribute="centerY" secondItem="YTl-1W-gDM" secondAttribute="centerY"/>
-                    <constraint id="1148" firstItem="956" firstAttribute="height" secondItem="YTl-1W-gDM" secondAttribute="height"/>
-                    <constraint id="1176" firstItem="956" firstAttribute="width" secondItem="YTl-1W-gDM" secondAttribute="width"/>
+                    <constraint id="2427" firstItem="2396" firstAttribute="top" secondItem="YTl-1W-gDM" secondAttribute="top" constant="10"/>
+                    <constraint id="2451" firstItem="2396" firstAttribute="leading" secondItem="YTl-1W-gDM" secondAttribute="leading" constant="10"/>
+                    <constraint id="2475" firstItem="2399" firstAttribute="centerY" secondItem="2396" secondAttribute="centerY"/>
+                    <constraint id="2499" firstItem="2399" firstAttribute="leading" secondItem="2396" secondAttribute="trailing" constant="10"/>
+                    <constraint id="2523" firstItem="YTl-1W-gDM" firstAttribute="trailing" secondItem="2399" secondAttribute="trailing" constant="10"/>
+                    <constraint id="2556" firstItem="2399" firstAttribute="height" secondItem="2396" secondAttribute="height" relation="lessThanOrEqual"/>
+                    <constraint id="2613" firstItem="2394" firstAttribute="width" secondItem="YTl-1W-gDM" secondAttribute="width" constant="-20"/>
+                    <constraint id="2660" firstItem="2394" firstAttribute="top" secondItem="YTl-1W-gDM" secondAttribute="top" constant="60"/>
+                    <constraint id="2684" firstItem="2394" firstAttribute="centerX" secondItem="YTl-1W-gDM" secondAttribute="centerX"/>
+                    <constraint id="2708" firstItem="YTl-1W-gDM" firstAttribute="bottom" secondItem="2394" secondAttribute="bottom" constant="39"/>
+                    <constraint id="2908" firstItem="2400" firstAttribute="trailing" secondItem="2394" secondAttribute="trailing"/>
+                    <constraint id="3095" firstItem="2400" firstAttribute="top" secondItem="2394" secondAttribute="bottom" constant="5"/>
+                    <constraint id="5738" firstItem="4826" firstAttribute="leading" secondItem="2394" secondAttribute="leading"/>
+                    <constraint id="5815" firstItem="2400" firstAttribute="leading" secondItem="4826" secondAttribute="trailing" constant="8"/>
+                    <constraint id="5893" firstItem="4826" firstAttribute="top" secondItem="2394" secondAttribute="bottom" constant="9"/>
                 </constraints>
             </tableViewCellContentView>
+            <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
             <connections>
-                <outlet property="StoryView" destination="956" id="name-outlet-956"/>
+                <outlet property="Title" destination="2399" id="name-outlet-2399"/>
+                <outlet property="Preview" destination="2394" id="name-outlet-2394"/>
+                <outlet property="ProfilePicture" destination="2396" id="name-outlet-2396"/>
+                <outlet property="CommentsButton" destination="2400" id="name-outlet-2400"/>
+                <outlet property="ReceiversCollection" destination="4826" id="name-outlet-4826"/>
             </connections>
-            <color key="backgroundColor" colorSpace="calibratedWhite" white="1" alpha="1"/>
         </tableViewCell>
     </objects>
     <resources>
         <image name="Contacts" width="192" height="192"/>
         <image name="Play" width="64" height="64"/>
-        <image name="Account" width="25" height="25"/>
         <image name="UserPic" width="36" height="36"/>
         <image name="Bell" width="25" height="25"/>
         <image name="Storytellers" width="25" height="25"/>
+        <image name="Account" width="25" height="25"/>
+        <image name="AddGroup" width="25" height="25"/>
+        <image name="Send" width="30" height="30"/>
+        <image name="Comment" width="30" height="30"/>
+        <image name="Replay" width="64" height="64"/>
     </resources>
 </document>
