--- a/TellMe_Mobile.Mobile/TellMe.iOS/Views/Cells/StoryViewCell.xib
+++ b/TellMe_Mobile.Mobile/TellMe.iOS/Views/Cells/StoryViewCell.xib
@@ -15,6 +15,7 @@
         <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" rowHeight="597" id="cxk-wN-pdQ" customClass="StoryViewCell">
             <rect key="frame" x="0.0" y="0.0" width="375" height="597"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+            <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="cxk-wN-pdQ" id="YTl-1W-gDM">
                 <rect key="frame" x="0.0" y="0.0" width="375" height="596"/>
                 <autoresizingMask key="autoresizingMask"/>
@@ -50,9 +51,10 @@
                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="cca-vO-SKB">
                         <rect key="frame" x="0.0" y="560" width="375" height="36"/>
                         <color key="backgroundColor" red="0.95415722150000004" green="0.95415722150000004" blue="0.95415722150000004" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <subviews/>
                     </view>
-                    <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" alwaysBounceHorizontal="YES" showsVerticalScrollIndicator="NO" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="2611">
-                        <rect key="frame" x="85" y="565" width="280" height="22"/>
+                    <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" alwaysBounceHorizontal="YES" showsVerticalScrollIndicator="NO" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="2611" horizontalCompressionResistancePriority="700">
+                        <rect key="frame" x="85" y="565" width="240" height="22"/>
                         <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                         <constraints>
                             <constraint firstAttribute="height" constant="22" id="2619"/>
@@ -89,6 +91,20 @@
                             <action selector="ReplayButton_Touched:" destination="cxk-wN-pdQ" id="17804" eventType="touchUpInside"/>
                         </connections>
                     </button>
+                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" id="19098" translatesAutoresizingMaskIntoConstraints="NO" customClass="Button">
+                        <rect key="frame" x="335" y="561" width="30" height="30"/>
+                        <color key="tintColor" colorSpace="calibratedWhite" white="0.666666666666667" alpha="1"/>
+                        <state key="normal" image="Heart">
+                            <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
+                        </state>
+                        <constraints>
+                            <constraint id="21199" firstItem="19098" firstAttribute="height" constant="30"/>
+                            <constraint id="22815" firstItem="19098" firstAttribute="width" constant="30" relation="greaterThanOrEqual"/>
+                        </constraints>
+                        <connections>
+                            <action selector="LikeButton_TouchUpInside:" destination="cxk-wN-pdQ" id="23017" eventType="touchUpInside"/>
+                        </connections>
+                    </button>
                 </subviews>
                 <constraints>
                     <constraint firstItem="1098" firstAttribute="top" secondItem="YTl-1W-gDM" secondAttribute="top" constant="10" id="1101"/>
@@ -103,7 +119,6 @@
                     <constraint firstItem="2216" firstAttribute="centerX" secondItem="1366" secondAttribute="centerX" id="2238"/>
                     <constraint firstItem="2216" firstAttribute="centerY" secondItem="1366" secondAttribute="centerY" id="2260"/>
                     <constraint firstAttribute="bottom" relation="greaterThanOrEqual" secondItem="2611" secondAttribute="bottom" constant="5" id="2615"/>
-                    <constraint firstAttribute="trailing" secondItem="2611" secondAttribute="trailing" constant="10" id="2616"/>
                     <constraint firstItem="13193" firstAttribute="leading" secondItem="YTl-1W-gDM" secondAttribute="leading" constant="10" id="13196"/>
                     <constraint firstItem="2611" firstAttribute="leading" secondItem="13193" secondAttribute="trailing" constant="8" id="14638"/>
                     <constraint firstItem="2611" firstAttribute="top" secondItem="1366" secondAttribute="bottom" constant="5" id="14649"/>
@@ -115,9 +130,11 @@
                     <constraint firstAttribute="trailing" secondItem="cca-vO-SKB" secondAttribute="trailing" id="ZW6-Fg-H6k"/>
                     <constraint firstItem="cca-vO-SKB" firstAttribute="top" secondItem="1366" secondAttribute="bottom" id="uYF-mL-hOO"/>
                     <constraint firstItem="cca-vO-SKB" firstAttribute="leading" secondItem="YTl-1W-gDM" secondAttribute="leading" id="yUH-n7-ryo"/>
+                    <constraint id="21708" firstItem="YTl-1W-gDM" firstAttribute="trailing" secondItem="19098" secondAttribute="trailing" constant="10"/>
+                    <constraint id="21806" firstItem="19098" firstAttribute="centerY" secondItem="2611" secondAttribute="centerY"/>
+                    <constraint id="22235" firstItem="19098" firstAttribute="leading" secondItem="2611" secondAttribute="trailing" constant="10"/>
                 </constraints>
             </tableViewCellContentView>
-            <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
             <connections>
                 <outlet property="Preview" destination="1366" id="name-outlet-1366"/>
                 <outlet property="ProfilePicture" destination="1098" id="name-outlet-1098"/>
@@ -125,6 +142,7 @@
                 <outlet property="ReplayButton" destination="15508" id="name-outlet-15508"/>
                 <outlet property="Spinner" destination="2216" id="name-outlet-2216"/>
                 <outlet property="Title" destination="1856" id="name-outlet-1856"/>
+                <outlet property="LikeButton" destination="19098" id="name-outlet-19098"/>
             </connections>
             <point key="canvasLocation" x="8.5" y="-69.5"/>
         </tableViewCell>
@@ -140,5 +158,7 @@
         <image name="AddGroup" width="25" height="25"/>
         <image name="Send" width="30" height="30"/>
         <image name="Comment" width="30" height="30"/>
+        <image name="Heart" width="30" height="30"/>
+        <image name="Heart-O" width="30" height="30"/>
     </resources>
 </document>
