--- a/TellMe_Mobile.Mobile/TellMe.iOS/Main.storyboard
+++ b/TellMe_Mobile.Mobile/TellMe.iOS/Main.storyboard
@@ -1,5 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13529" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="9189">
+    <device id="retina4_7" orientation="portrait">
+        <adaptation id="fullscreen"/>
+    </device>
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13527"/>
@@ -253,19 +256,19 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="1" sectionFooterHeight="1" translatesAutoresizingMaskIntoConstraints="NO" id="o82-m3-bw8">
-                                <rect key="frame" x="0.0" y="20" width="375" height="604"/>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" verticalCompressionResistancePriority="200" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="1" sectionFooterHeight="1" translatesAutoresizingMaskIntoConstraints="NO" id="o82-m3-bw8">
+                                <rect key="frame" x="0.0" y="20" width="375" height="586"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                             </tableView>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="INv-Go-WDv">
-                                <rect key="frame" x="0.0" y="624" width="375" height="43"/>
+                                <rect key="frame" x="0.0" y="606" width="375" height="61"/>
                                 <subviews>
                                     <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" showsHorizontalScrollIndicator="NO" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="AJt-hd-gkC">
-                                        <rect key="frame" x="5" y="5" width="330" height="33"/>
+                                        <rect key="frame" x="5" y="23" width="330" height="33"/>
                                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                         <constraints>
                                             <constraint firstAttribute="height" relation="lessThanOrEqual" constant="100" id="SoT-U5-4EJ"/>
-                                            <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="33" id="bEw-vP-0Pe"/>
+                                            <constraint firstAttribute="height" constant="33" id="bEw-vP-0Pe"/>
                                         </constraints>
                                         <color key="textColor" white="0.33333333333333331" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="14"/>
@@ -277,7 +280,7 @@
                                         </userDefinedRuntimeAttributes>
                                     </textView>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="sgx-Ed-tT4">
-                                        <rect key="frame" x="340" y="8" width="30" height="30"/>
+                                        <rect key="frame" x="340" y="26" width="30" height="30"/>
                                         <constraints>
                                             <constraint firstAttribute="height" constant="30" id="Mqk-Q2-9x5"/>
                                             <constraint firstAttribute="width" secondItem="sgx-Ed-tT4" secondAttribute="height" multiplier="1:1" id="tQp-Bk-PMJ"/>
@@ -287,16 +290,60 @@
                                             <action selector="SendButtonTouched:" destination="sUG-fC-Iqo" eventType="touchUpInside" id="T9D-o0-PJK"/>
                                         </connections>
                                     </button>
+                                    <view clipsSubviews="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="hpk-zt-Pxb">
+                                        <rect key="frame" x="5" y="5" width="278" height="18"/>
+                                        <subviews>
+                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" usesAttributedText="YES" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Qg6-d4-7bB">
+                                                <rect key="frame" x="0.0" y="0.0" width="111" height="13"/>
+                                                <constraints>
+                                                    <constraint firstAttribute="height" constant="13" id="KJo-yw-wOJ"/>
+                                                </constraints>
+                                                <attributedString key="attributedText">
+                                                    <fragment content="Reply to: Username">
+                                                        <attributes>
+                                                            <color key="NSColor" white="0.33333333333333331" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                                            <font key="NSFont" size="12" name=".AppleSystemUIFont"/>
+                                                            <paragraphStyle key="NSParagraphStyle" alignment="left" lineBreakMode="wordWrapping" baseWritingDirection="natural" tighteningFactorForTruncation="0.0"/>
+                                                        </attributes>
+                                                    </fragment>
+                                                </attributedString>
+                                                <nil key="highlightedColor"/>
+                                            </label>
+                                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="9pm-I7-V5O" customClass="Button">
+                                                <rect key="frame" x="121" y="0.0" width="42" height="13"/>
+                                                <constraints>
+                                                    <constraint firstAttribute="height" constant="13" id="9CS-Mr-wn1"/>
+                                                    <constraint firstAttribute="width" constant="42" id="SW8-i5-NIU"/>
+                                                </constraints>
+                                                <fontDescription key="fontDescription" type="system" pointSize="13"/>
+                                                <state key="normal" title="Cancel"/>
+                                                <connections>
+                                                    <action selector="CancelButtonTouched:forEvent:" destination="sUG-fC-Iqo" eventType="touchUpInside" id="w3S-EO-rqa"/>
+                                                </connections>
+                                            </button>
+                                        </subviews>
+                                        <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                        <constraints>
+                                            <constraint firstItem="9pm-I7-V5O" firstAttribute="leading" secondItem="Qg6-d4-7bB" secondAttribute="trailing" constant="10" id="0ng-Ev-uLE"/>
+                                            <constraint firstItem="Qg6-d4-7bB" firstAttribute="leading" secondItem="hpk-zt-Pxb" secondAttribute="leading" id="22N-aS-QRV"/>
+                                            <constraint firstAttribute="height" constant="18" id="LKY-JG-lfY"/>
+                                            <constraint firstAttribute="trailing" relation="greaterThanOrEqual" secondItem="9pm-I7-V5O" secondAttribute="trailing" id="Wjn-Vm-jLn"/>
+                                            <constraint firstItem="9pm-I7-V5O" firstAttribute="centerY" secondItem="Qg6-d4-7bB" secondAttribute="centerY" id="lIN-UT-Oda"/>
+                                            <constraint firstItem="Qg6-d4-7bB" firstAttribute="top" secondItem="hpk-zt-Pxb" secondAttribute="top" id="tpJ-gU-Aqb"/>
+                                        </constraints>
+                                    </view>
                                 </subviews>
                                 <color key="backgroundColor" red="0.95415722150000004" green="0.95415722150000004" blue="0.95415722150000004" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <constraints>
                                     <constraint firstAttribute="bottom" secondItem="sgx-Ed-tT4" secondAttribute="bottom" constant="5" id="1py-R0-qhJ"/>
                                     <constraint firstAttribute="bottom" secondItem="AJt-hd-gkC" secondAttribute="bottom" constant="5" id="4Jo-bA-qmr"/>
-                                    <constraint firstItem="AJt-hd-gkC" firstAttribute="top" secondItem="INv-Go-WDv" secondAttribute="top" constant="5" id="8Ma-oq-43E"/>
                                     <constraint firstItem="AJt-hd-gkC" firstAttribute="leading" secondItem="INv-Go-WDv" secondAttribute="leading" constant="5" id="ThA-a7-qHV"/>
                                     <constraint firstAttribute="trailing" secondItem="sgx-Ed-tT4" secondAttribute="trailing" constant="5" id="TiU-KB-wd4"/>
-                                    <constraint firstAttribute="height" constant="43" id="eqF-ne-yFw"/>
+                                    <constraint firstItem="hpk-zt-Pxb" firstAttribute="leading" secondItem="AJt-hd-gkC" secondAttribute="leading" id="ZJp-0c-5Lh"/>
                                     <constraint firstItem="sgx-Ed-tT4" firstAttribute="leading" secondItem="AJt-hd-gkC" secondAttribute="trailing" constant="5" id="kOd-JQ-0x0"/>
+                                    <constraint firstItem="hpk-zt-Pxb" firstAttribute="width" secondItem="AJt-hd-gkC" secondAttribute="width" constant="-52" id="liR-vn-Lsq"/>
+                                    <constraint firstItem="AJt-hd-gkC" firstAttribute="top" secondItem="hpk-zt-Pxb" secondAttribute="bottom" id="lko-Jb-PLQ"/>
+                                    <constraint firstItem="hpk-zt-Pxb" firstAttribute="top" secondItem="INv-Go-WDv" secondAttribute="top" constant="5" id="n2g-46-Uvw"/>
                                 </constraints>
                             </view>
                         </subviews>
@@ -313,15 +360,18 @@
                     </view>
                     <connections>
                         <outlet property="BottomOffset" destination="Rg9-Yd-64d" id="htc-yD-ea7"/>
+                        <outlet property="CancelButton" destination="9pm-I7-V5O" id="di8-A6-Rkj"/>
+                        <outlet property="NewCommentHeight" destination="bEw-vP-0Pe" id="PO4-Id-wLc"/>
                         <outlet property="NewCommentText" destination="AJt-hd-gkC" id="zDN-K1-yRl"/>
-                        <outlet property="NewCommentWrapperHeight" destination="eqF-ne-yFw" id="X8E-Jq-dKA"/>
+                        <outlet property="ReplyToLabel" destination="Qg6-d4-7bB" id="EAR-DV-1wp"/>
+                        <outlet property="ReplyToWrapperHeight" destination="LKY-JG-lfY" id="Kfv-jH-u4J"/>
                         <outlet property="SendButton" destination="sgx-Ed-tT4" id="a9R-0K-Cj7"/>
                         <outlet property="TableView" destination="o82-m3-bw8" id="bah-71-bK8"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="9df-x4-ssd" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-2694" y="-1122"/>
+            <point key="canvasLocation" x="-2695.1999999999998" y="-1122.1889055472266"/>
         </scene>
     </scenes>
     <resources>
