--- a/Code/Mobile/TellMe.Mobile.iOS/Views/Cells/StoryViewCell.xib
+++ b/Code/Mobile/TellMe.Mobile.iOS/Views/Cells/StoryViewCell.xib
@@ -1,11 +1,11 @@
-<?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="13529" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES">
+<?xml version="1.0" encoding="UTF-8"?>
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="13771" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13527"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13772"/>
         <capability name="Aspect ratio constraints" minToolsVersion="5.1"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -15,9 +15,8 @@
         <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" rowHeight="597" id="cxk-wN-pdQ" customClass="StoryViewCell">
             <rect key="frame" x="0.0" y="0.0" width="375" height="597"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-            <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="cxk-wN-pdQ" id="YTl-1W-gDM">
-                <rect key="frame" x="0.0" y="0.0" width="375" height="596"/>
+                <rect key="frame" x="0.0" y="0.0" width="375" height="596.5"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
                     <imageView clipsSubviews="YES" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="UserPic" translatesAutoresizingMaskIntoConstraints="NO" id="1098" customClass="Picture">
@@ -51,9 +50,8 @@
                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="cca-vO-SKB">
                         <rect key="frame" x="0.0" y="560" width="375" height="36"/>
                         <color key="backgroundColor" red="0.95415722150000004" green="0.95415722150000004" blue="0.95415722150000004" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-                        <subviews/>
                     </view>
-                    <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" alwaysBounceHorizontal="YES" showsVerticalScrollIndicator="NO" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="2611" horizontalCompressionResistancePriority="700">
+                    <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" horizontalCompressionResistancePriority="700" alwaysBounceHorizontal="YES" showsVerticalScrollIndicator="NO" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="2611">
                         <rect key="frame" x="85" y="565" width="240" height="22"/>
                         <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                         <constraints>
@@ -77,7 +75,7 @@
                         <color key="textColor" white="0.33333333333333298" alpha="1" colorSpace="calibratedWhite"/>
                         <nil key="highlightedColor"/>
                     </label>
-                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="15508" customClass="Button" hidden="YES">
+                    <button hidden="YES" opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="15508" customClass="Button">
                         <rect key="frame" x="155.5" y="278" width="64" height="64"/>
                         <constraints>
                             <constraint firstAttribute="height" constant="64" id="16294"/>
@@ -88,21 +86,32 @@
                             <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                         </state>
                         <connections>
-                            <action selector="ReplayButton_Touched:" destination="cxk-wN-pdQ" id="17804" eventType="touchUpInside"/>
+                            <action selector="ReplayButton_Touched:" destination="cxk-wN-pdQ" eventType="touchUpInside" id="17804"/>
                         </connections>
                     </button>
-                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" id="19098" translatesAutoresizingMaskIntoConstraints="NO" customClass="Button">
+                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="19098" customClass="Button">
                         <rect key="frame" x="335" y="561" width="30" height="30"/>
-                        <color key="tintColor" colorSpace="calibratedWhite" white="0.666666666666667" alpha="1"/>
+                        <constraints>
+                            <constraint firstAttribute="height" constant="30" id="21199"/>
+                            <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="30" id="22815"/>
+                        </constraints>
+                        <color key="tintColor" white="0.66666666666666696" alpha="1" colorSpace="calibratedWhite"/>
                         <state key="normal" image="Heart">
                             <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                         </state>
-                        <constraints>
-                            <constraint id="21199" firstItem="19098" firstAttribute="height" constant="30"/>
-                            <constraint id="22815" firstItem="19098" firstAttribute="width" constant="30" relation="greaterThanOrEqual"/>
-                        </constraints>
                         <connections>
-                            <action selector="LikeButton_TouchUpInside:" destination="cxk-wN-pdQ" id="23017" eventType="touchUpInside"/>
+                            <action selector="LikeButton_TouchUpInside:" destination="cxk-wN-pdQ" eventType="touchUpInside" id="23017"/>
+                        </connections>
+                    </button>
+                    <button opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Asx-Z9-y1U">
+                        <rect key="frame" x="341" y="18" width="24" height="24"/>
+                        <constraints>
+                            <constraint firstAttribute="height" constant="24" id="Uwx-bw-a2U"/>
+                            <constraint firstAttribute="width" secondItem="Asx-Z9-y1U" secondAttribute="height" multiplier="1:1" id="Wxo-ph-p9y"/>
+                        </constraints>
+                        <state key="normal" image="More"/>
+                        <connections>
+                            <action selector="MoreButton_Touched:" destination="cxk-wN-pdQ" eventType="touchUpInside" id="2ys-yl-aWA"/>
                         </connections>
                     </button>
                 </subviews>
@@ -114,7 +123,6 @@
                     <constraint firstItem="1366" firstAttribute="leading" secondItem="YTl-1W-gDM" secondAttribute="leading" id="1748"/>
                     <constraint firstItem="1856" firstAttribute="leading" secondItem="1098" secondAttribute="trailing" constant="10" id="1920"/>
                     <constraint firstItem="1856" firstAttribute="centerY" secondItem="1098" secondAttribute="centerY" id="1942"/>
-                    <constraint firstAttribute="trailing" relation="greaterThanOrEqual" secondItem="1856" secondAttribute="trailing" constant="10" id="1964"/>
                     <constraint firstItem="1856" firstAttribute="height" relation="lessThanOrEqual" secondItem="1098" secondAttribute="height" id="2042"/>
                     <constraint firstItem="2216" firstAttribute="centerX" secondItem="1366" secondAttribute="centerX" id="2238"/>
                     <constraint firstItem="2216" firstAttribute="centerY" secondItem="1366" secondAttribute="centerY" id="2260"/>
@@ -126,39 +134,35 @@
                     <constraint firstItem="15508" firstAttribute="centerX" secondItem="1366" secondAttribute="centerX" id="16112"/>
                     <constraint firstItem="15508" firstAttribute="centerY" secondItem="1366" secondAttribute="centerY" id="16133"/>
                     <constraint firstItem="15508" firstAttribute="centerX" secondItem="2216" secondAttribute="centerX" id="16933"/>
+                    <constraint firstAttribute="trailing" secondItem="19098" secondAttribute="trailing" constant="10" id="21708"/>
+                    <constraint firstItem="19098" firstAttribute="centerY" secondItem="2611" secondAttribute="centerY" id="21806"/>
+                    <constraint firstItem="19098" firstAttribute="leading" secondItem="2611" secondAttribute="trailing" constant="10" id="22235"/>
+                    <constraint firstAttribute="trailing" secondItem="Asx-Z9-y1U" secondAttribute="trailing" constant="10" id="I2r-C9-gcB"/>
+                    <constraint firstItem="Asx-Z9-y1U" firstAttribute="centerY" secondItem="1098" secondAttribute="centerY" id="Qd1-JE-EcR"/>
                     <constraint firstAttribute="bottom" secondItem="cca-vO-SKB" secondAttribute="bottom" id="YP0-oC-e6F"/>
                     <constraint firstAttribute="trailing" secondItem="cca-vO-SKB" secondAttribute="trailing" id="ZW6-Fg-H6k"/>
+                    <constraint firstItem="Asx-Z9-y1U" firstAttribute="leading" relation="greaterThanOrEqual" secondItem="1856" secondAttribute="trailing" constant="10" id="gfg-2V-xq6"/>
                     <constraint firstItem="cca-vO-SKB" firstAttribute="top" secondItem="1366" secondAttribute="bottom" id="uYF-mL-hOO"/>
                     <constraint firstItem="cca-vO-SKB" firstAttribute="leading" secondItem="YTl-1W-gDM" secondAttribute="leading" id="yUH-n7-ryo"/>
-                    <constraint id="21708" firstItem="YTl-1W-gDM" firstAttribute="trailing" secondItem="19098" secondAttribute="trailing" constant="10"/>
-                    <constraint id="21806" firstItem="19098" firstAttribute="centerY" secondItem="2611" secondAttribute="centerY"/>
-                    <constraint id="22235" firstItem="19098" firstAttribute="leading" secondItem="2611" secondAttribute="trailing" constant="10"/>
                 </constraints>
             </tableViewCellContentView>
+            <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
             <connections>
+                <outlet property="LikeButton" destination="19098" id="name-outlet-19098"/>
                 <outlet property="Preview" destination="1366" id="name-outlet-1366"/>
                 <outlet property="ProfilePicture" destination="1098" id="name-outlet-1098"/>
                 <outlet property="ReceiversCollection" destination="2611" id="name-outlet-2611"/>
                 <outlet property="ReplayButton" destination="15508" id="name-outlet-15508"/>
                 <outlet property="Spinner" destination="2216" id="name-outlet-2216"/>
                 <outlet property="Title" destination="1856" id="name-outlet-1856"/>
-                <outlet property="LikeButton" destination="19098" id="name-outlet-19098"/>
             </connections>
             <point key="canvasLocation" x="8.5" y="-69.5"/>
         </tableViewCell>
     </objects>
     <resources>
+        <image name="Heart" width="30" height="30"/>
+        <image name="More" width="30" height="30"/>
         <image name="Replay" width="64" height="64"/>
         <image name="UserPic" width="36" height="36"/>
-        <image name="Contacts" width="192" height="192"/>
-        <image name="Play" width="64" height="64"/>
-        <image name="Bell" width="25" height="25"/>
-        <image name="Storytellers" width="25" height="25"/>
-        <image name="Account" width="25" height="25"/>
-        <image name="AddGroup" width="25" height="25"/>
-        <image name="Send" width="30" height="30"/>
-        <image name="Comment" width="30" height="30"/>
-        <image name="Heart" width="30" height="30"/>
-        <image name="Heart-O" width="30" height="30"/>
     </resources>
 </document>
